# gameboyemu

./: .gitignore  CMakeLists.txt  README.md  clean.bat
app/: CMakeLists.txt  decompiler.cpp  emulator.cpp
include/gameboyemu/: BuildSettings.h.in  CPU.h  gameboyinstructionset.h  instruction.h  register.h
src/: CMakeLists.txt  instruction.cpp  register.cpp
